# ChangeLog for sys-devel/gettext
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-devel/gettext/ChangeLog,v 1.20 2003/07/14 13:10:49 aliz Exp $

*gettext-0.12.1 (14 Jul 2003)

  14 Jul 2003; Daniel Ahlberg <aliz@gentoo.org> gettext-0.12.1.ebuild :
  Version bump.

*gettext-0.12 (13 Jul 2003)

  13 Jul 2003; Hanno Boeck <hanno@gentoo.org> gettext-0.12.ebuild:
  Version bump.

*gettext-0.11.5-r1 (24 Nov 2002)
  01 Jul 2003; Todd Sunderlin <todd@gentoo.org> gettext-0.11.5-r1.ebuild:
  set stable on sparc

  19 May 2003; <root@gentoo.org> gettext-0.11.5-r1.ebuild:
  Added ~mips to KEYWORDS

  18 Feb 2003; Zach Welch <zwelch@gentoo.org> gettext-0.11.5-r1.ebuild : 
  Added arm to keywords.

  07 Feb 2003; Guy Martin <gmsoft@gentoo.org> gettext-0.11.5-r1.ebuild : 
  Added hppa to keywords.

*gettext-0.11.1  (12 Dec 2002)

  12 Dec 2002 ; Jan Seidel <tuxus@gentoo.org> :
  Added mips to keywords.

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*gettext-0.11.5-r1 (24 Nov 2002)

  24 Nov 2002; L. Boshell <leonardop@gentoo.org> : Don't delete the entire
  ${D}/usr/lib directory, only the files that could be problematic (i.e.
  *.{a,so}. Added IUSE var. Use mirror://gnu for SRC_URI.
  
  11 Sep 2002; Martin Schlemmer <azarah@gentoo.org> gettext-0.11.1.ebuild :

  Make sure that no headers is installed.  Seems like this happened in
  very rare instances, bug #7682.

*gettext-0.11.5 (16 Aug 2002)

  31 Mar 2003; Jan Seidel <tuxus@gentoo.org> gettext-0.11.5.ebuild :
  Added mips to KEYWORDS

  16 Aug 2002; Seemant Kulleen <seemant@gentoo.org> gettext-0.11.5.ebuild
  files/digest-gettext-0.11.5 :

  Version bump.

*gettext-0.11.3-r1 (3 Aug 2002)

  3 Aug 2002; Martin Schlemmer <azarah@gentoo.org> gettext-0.11.3-r1.ebuild :

  Remove the installed header files, as these overwrite those that comes with
  glibc, and then breaks things.

*gettext-0.11.3 (21 Jul 2002)
