@@ -1,1 +1,0 @@
-MD5 9c6e71b00c918f54731c5d92e7240085 gettext-0.12.tar.gz 5659551
