@@ -1,6 +1,10 @@
 # ChangeLog for sys-devel/gettext
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/gettext/ChangeLog,v 1.20 2003/07/14 13:10:49 aliz Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/gettext/ChangeLog,v 1.21 2003/09/17 00:36:37 drobbins Exp $
+
+  16 Sep 2003; Daniel Robbins <drobbins@gentoo> gettext-0.12.1.ebuild:
+  KEYWORDS="-*" since it needs C++ to compile and breaks bootstrap.
+  Closing bug #12699.
 
 *gettext-0.12.1 (14 Jul 2003)
 
